--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "fetch-ponyfill": "^6.1.0",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "node-fetch": "^2.6.0"
   },
   "dependencies": {
-    "es6-promise": "^4.2.8",
-    "node-fetch": "^2.6.0"
+    "@types/dotenv": "^6.1.1",
+    "es6-promise": "^4.2.8"
   },
   "files": [
     "lib/**/*"
