--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-iex-cloud",
   "version": "1.0.5",
   "description": "SDK for iex cloud",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest --config jestconfig.json ",
     "prepublishOnly": "npm test",
