--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-iex-cloud",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.2",
   "description": "SDK for iex cloud",
   "main": "lib/index.js",
   "scripts": {
