--- a/package.json
+++ b/package.json
@@ -20,20 +20,30 @@
   },
   "homepage": "https://github.com/JBooker10/node-iex-cloud#readme",
   "devDependencies": {
-    "@types/es6-promise": "^3.3.0",
     "@types/dotenv": "^6.1.1",
-    "@types/node-fetch": "^2.3.7",
+    "@types/es6-promise": "^3.3.0",
     "@types/jest": "^24.0.15",
+    "@types/node-fetch": "^2.3.7",
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "fetch-ponyfill": "^6.1.0",
     "jest": "^24.8.0",
+    "node-fetch": "^2.6.0",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3",
-    "node-fetch": "^2.6.0"
+    "typescript": "^3.5.3"
   },
-  "dependencies": {
-    "es6-promise": "^4.2.8"
-  },
+  "dependencies": {},
+  "keywords": [
+    "stocks",
+    "financials",
+    "analytics",
+    "iex",
+    "iex-cloud",
+    "equites",
+    "market coverage",
+    "securities",
+    "node"
+  ],
   "files": [
     "lib/**/*"
   ]
