--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2015.promise", "es5", "es2015", "dom"],
+    "lib": ["es2015.promise", "es5", "es2015", "es2017.object", "dom"],
     "declaration": true,
     "outDir": "./lib",
     "strict": true
