--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "es5",
     "module": "commonjs",
     "lib": ["es5", "dom"],
-    "declaration": true,
+    "allowJs": true,
     "outDir": "./lib",
-    "strict": true
+    "strict": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
   "include": ["src"],
   "exclude": ["./node_modules", "**/__tests__/*"]
