--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es5", "dom"],
-    "allowJs": true,
+    "lib": ["es5", "es2015", "dom"],
+    // "allowJs": true,
     "outDir": "./lib",
     "strict": false,
+    "declaration": true,
     "moduleResolution": "node",
     "resolveJsonModule": true
   },
